[package]
name = "spaceship_game"
version = "0.4.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy_platform = "0.16.0"
rand = "0.9.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
